fix: update span color to improve visibility

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ nav{
 }
 
 span{
-    color: #ae1538;
+    color: #66ff64;
 }
 
 nav ul li{
